--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,3 +1,16 @@
+body {
+  min-height: 100vh;
+  background: #FAFAFA;
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+  font-family: 'Open Sans',sans-serif;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
 .App {
   text-align: center;
 }
@@ -23,31 +36,27 @@
 }
 
 @keyframes App-logo-spin {
-  from { transform: rotate(0deg); }
-  to { transform: rotate(360deg); }
-}
-.root-container{
-  position: relative;
-  width: fit-content;
-  margin: 100px auto; 
-  margin: 100px auto;
-  /* border: 1px solid red; */
-  padding: 10px 20px;
-  background: white;
-  box-shadow: 0px 2px 8px 1px rgba(0, 0, 0, 0.2);
+  from {
+    transform: rotate(0deg);
+  }
+
+  to {
+    transform: rotate(360deg);
+  }
 }
 
-/* .card {
-  background:  #FFFFFF;
-  border-radius: 2px;
-  display: inline-block;
-  height: 300px;
-  margin: 1rem;
-  position: relative;
-  width: 500px;
+.root-container {
+  padding: 40px;
+  height: 400px;
+  background: #FFFFFF;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: flex-start;
+  box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
 }
 
-.card-5 {
-  box-shadow: 0 19px 38px rgba(0,0,0,0.30), 0 15px 12px rgba(0,0,0,0.22);
-} */
+.root-container > div {
+  margin: 20px 0;
+}
 
