--- a/client/src/components/Search/Search.css
+++ b/client/src/components/Search/Search.css
@@ -1,93 +1,112 @@
-body {
-    font-family: Helvetica, sans-serif;
-  }
+.search-wrapper {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
 
-  .search-container{
-      position: relative;
-      box-shadow: 0 1px 4px rgba(0, 0, 0, 0.3);
-  }
-  
-  .react-autosuggest__container {
-    position: relative;
-  }
-  
-  .react-autosuggest__input {
-    width: 240px;
-    height: 20px;
-    padding: 10px 20px;
-    font-family: Helvetica, sans-serif;
-    font-weight: 300;
-    font-size: 16px;
-    border: 1px solid #aaa;
-    /* border-radius: 4px; */
-  }
-  
-  .react-autosuggest__input--focused {
-    outline: none;
-  }
-  
-  .react-autosuggest__input--open {
-    border-bottom-left-radius: 0;
-    border-bottom-right-radius: 0;
-  }
-  
-  .react-autosuggest__suggestions-container {
-    display: none;
-  }
-  
-  .react-autosuggest__suggestions-container--open {
-    display: block;
-    position: absolute;
-    top: 51px;
-    width: 280px;
-    border: 1px solid #aaa;
-    background-color: #fff;
-    font-family: Helvetica, sans-serif;
-    font-weight: 300;
-    font-size: 16px;
-    border-bottom-left-radius: 4px;
-    border-bottom-right-radius: 4px;
-    z-index: 2;
-  }
-  
-  .react-autosuggest__suggestions-list {
-    margin: 0;
-    padding: 0;
-    list-style-type: none;
-  }
-  
-  .react-autosuggest__suggestion {
-    cursor: pointer;
-    padding: 10px 20px;
-  }
-  
-  .react-autosuggest__suggestion--highlighted {
-    background-color: #ddd;
-  }
-  
-  .react-autosuggest__suggestion-match {
-    color: red;
-    font-weight: bold;
-  }
-  
-  .search-icon {
-    position: absolute;
-    width: 20px;
-    height: 20px;
-    font-size: 1.5rem;
-    padding: 10px;
-    background-color: #FABB2D;
-    color: white;
-    border: 1px solid #FABB2D;
-    border-radius: 2px 0 0 2px;
-    cursor: pointer;
-    top: 0;
-    right: 0;
+.search-bar-wrap {
+  display: flex;
+}
+
+.react-autosuggest__container {
+  position: relative;
+}
+
+.react-autosuggest__input {
+  width: 240px;
+  height: 20px;
+  padding: 10px 10px;
+  font-weight: 300;
+  font-size: 14px;
+  border: 1px solid #dce4ec;
+}
+
+.react-autosuggest__input--focused {
+  outline: none;
+}
+
+.react-autosuggest__input--open {
+  border-bottom-left-radius: 0;
+  border-bottom-right-radius: 0;
+}
+
+.react-autosuggest__suggestions-container {
+  display: none;
+}
+
+.react-autosuggest__suggestions-container--open {
+  display: block;
+  position: absolute;
+  top: 41px;
+  width: 260px;
+  border: 1px solid #dce4ec;
+  background-color: #fff;
+  font-weight: 300;
+  font-size: 14px;
+  border-bottom-left-radius: 4px;
+  border-bottom-right-radius: 4px;
+  z-index: 2;
+}
+
+.react-autosuggest__suggestions-list {
+  margin: 0;
+  padding: 0;
+  list-style-type: none;
+}
+
+.react-autosuggest__suggestion {
+  cursor: pointer;
+  padding: 10px 20px;
+}
+
+.react-autosuggest__suggestion--highlighted {
+  background-color: #ddd;
+}
+
+.react-autosuggest__suggestion-match {
+  color: red;
+  font-weight: bold;
+}
+
+.search-icon {
+  width: 20px;
+  height: 20px;
+  font-size: 1.25rem;
+  padding: 10px;
+  background-color: #673AB7;
+  color: white;
+  border: 1px solid #673AB7;
+  border-radius: 2px 0 0 2px;
+  cursor: pointer;
 }
 
 .svg-inline--fa {
-    display: inline-block;
-    font-size: inherit;
-    height: 1em;
-    overflow: visible;
+  display: inline-block;
+  font-size: inherit;
+  height: 1em;
+  overflow: visible;
+}
+
+.selected-item {
+  margin: 40px 0 0 0;
+  padding: 20px;
+  background: #fff;
+  font-size: 16px;
+  color: inherit;
+  width: 500px;
+  border: 1px solid #dce4ec;
+}
+
+h4 {
+  margin: 0;
+  margin-top: 5px;
+  margin-bottom: 10px;
+  font-size: 16px;
+  text-transform: uppercase;
+}
+
+h5 {
+  margin: 0;
+  margin-bottom: 0.5em;
+  text-transform: capitalize;
 }
